# CrystalBot

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  README.md
rlbot/: CppPythonAgent.cfg
src/: actionSequence.cpp  actionSequence.h  crystalbot.cpp  crystalbot.h  main.cpp  orbuculum.cpp  orbuculum.h  predictor.cpp  predictor.h  simulate.cpp  simulate.h
src/utils/: bridge.cpp  bridge.h  renderBall.cpp  renderBall.h  ringBuffer.hpp
